# cells

./: Cargo.toml  README.md
src/: action.rs  brain.rs  cell.rs  constants.rs  hello.rs  main.rs  tiles.rs  utilities.rs  world.rs
src/ai/: README.md  neural_network.rs
web/: App.tsx  README.md  bun.lockb  compile.ts  index.tsx  package.json  server.ts
