[package]
name = "cells"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# bevy = { version = "0.9.0", features = ["dynamic"] }

# Enable a small amount of optimization in debug mode
# [profile.dev]
# opt-level = 1

# # Enable high optimizations for dependencies (incl. Bevy), but not for our code:
# [profile.dev.package."*"]
# opt-level = 3


[dependencies]
bevy = "0.9.0"
bevy_rapier2d = "0.19.0"
# bevy_rapier2d = { git = "https://github.com/dimforge/bevy_rapier", tag = "v0.12.1" }
bevy_prototype_lyon = "0.7.1"

[dev-dependencies]
bevy = "0.9.0"
bevy_rapier2d = "0.19.0"
# bevy_rapier2d = { git = "https://github.com/dimforge/bevy_rapier", tag = "v0.12.1" }
bevy_prototype_lyon = "0.7.1"
