[package]
name = "roots"
version = "0.1.0"
edition = "2021"
authors = ["Olivier Rousseau <zeachco@gmail.com>", "mitchmindtree <mitchell.nordine@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.18.1"
rand = "0.8.5"

[profile.dev.package.your_dependency]
opt-level = 3

[profile.dev]
debug = false
codegen-units = 16
